spade-tests/src/snapshots/spade_tests__ast_lowering__names_do_not_leak_across_match_branches.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum Option<T> {
    Some{ t: T },
    None
}
use Option::Some;
use Option::None;
fn test() -> int<10> {
    match Some(true) {
        Some(count) => 0,
        None => count
    }
}


error: Use of undeclared name count
   ┌─ testinput:10:17
   │
10 │         None => count
   │                 ^^^^^ Undeclared name


